hotfix/ crud product
